# Amalgam

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: CHANGELOG.md  PLANNING.md
scripts/: extract-changelog.js
src/: App.css  App.tsx  Seek.tsx  Settings.css  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  seek.rs  settings.rs  utils.rs
src/components/: ClipboardCard.tsx  SeekView.tsx  TraceView.tsx
src/hooks/: useClipboardHistory.ts  useFileSearch.ts  useSettings.ts
